# Bead-Pattern-Designer

./: pyproject.toml
bead_pattern_designer/: main.py
bead_pattern_designer/layout/: Button_layout.py
bead_pattern_designer/models/: pattern.py
bead_pattern_designer/ui/: canvas_view.py  main_window.py
bead_pattern_designer/utils/: pdf_export.py
models/: cell.py  pattern.py
ui/: canvas_view.py  main_window.py
utils/: colors.py  pdf_export.py
