[project]
name = "Bead-pattern-designer"
version = "0.1.0"
description = "App per disegnare modelli di perline ed esportarli in PDF"
authors = [{ name = "Marco Lizza", email = "marcolizza1@gmail.com" }]
dependencies = ["PyQt6"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
