[project]
name = "bead-pattern-designer"
version = "0.0.1"
description = "App per disegnare modelli di perline ed esportarli in PDF"
authors = [
    { name = "Marco Lizza", email = "marcolizza1@gmail.com" }
]
dependencies = ["PyQt6"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bead_pattern_designer*"]

[project.scripts]
bead-designer = "bead_pattern_designer.main:main"
